--- a/ldo-mc-vr.bib
+++ b/ldo-mc-vr.bib
@@ -159,8 +159,14 @@
 }
 
 @misc{savio,
-  author = {Berkeley Research Computing},
+  author = {{Berkeley Research Computing}},
   title = {System Overview},
   year = {2018},
   howpublished = {\url{http://research-it.berkeley.edu/services/high-performance-computing/system-overview}}
+}
+
+@misc{wom,
+  author = {Rob Womersley},
+  title = {Extremal (Maximum Determinant) points on the sphere $S^2$},
+  howpublished = {\url{http://web.maths.unsw.edu.au/~rsw/Sphere/Extremal/New/index.html}}
 }
