small fix in biblio spacing

--- a/ldo-mc-vr.bib
+++ b/ldo-mc-vr.bib
@@ -133,7 +133,7 @@
 }
 
 @article{morel,
-  title={{A Hybrid Collocation-Galerkin-\sn Method for Solving the Boltzmann Transport Equation}},
+  title={{A Hybrid Collocation-Galerkin-\sn\ Method for Solving the Boltzmann Transport Equation}},
   author={Morel, J. E.},
   journal={Nuclear Science and Engineering},
   volume={101},
